welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:6: error: Missing closing brace `}' assumed here
def growFlowers() 
^FlowerPot:7: error: expected class or object definition
{
^FlowerPot:10: error: expected class or object definition
def faireFleurs
^FlowerPot:11: error: expected class or object definition
{
^